Add Customer Entity and Controller
