# src/main/java/guru/springframework/juniemvc/entities/BeerOrder.java
@@ -5,6 +5,8 @@ import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.EnumType;
 import jakarta.persistence.Enumerated;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -29,7 +31,11 @@ import java.util.Set;
 @Entity
 public class BeerOrder extends BaseEntity {
 
-    private String customerRef;
+//    private String customerRef;
+
+    @ManyToOne
+    @JoinColumn(name = "customer_id")
+    private Customer customer;
 
     @Column(precision = 19, scale = 2)
     private BigDecimal paymentAmount;
